--- a/template/login.html
+++ b/template/login.html
@@ -1,14 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="../static/login.css">
     <title>Document</title>
   </head>
   <body>
-    안녕하세요!
+  <div class="wrap">
+    <header>
+      <h2>세상의 모든 잡담!</h2>
+      <h1> 잡담 모의</h1>
+    </header>
 
-    제가 수정했습니다
+    <div class="user_login">
+      <div class="form-floating mb-3">
+        <input type="text" class="form-control border_15" id="user_id"  placeholder="url">
+        <label for="floatingInput">Email</label>
+      </div>
+      <div class="form-floating mb-3" >
+        <input type="password" class="form-control border_20" id="user_pw" placeholder="url">
+        <label for="floatingInput">Password</label>
+      </div>
+
+<!--      <button class="btn btn-dark form-control border_15">LOGIN</button>-->
+    </div>
+  </div>
   </body>
 </html>
