--- a/static/login.css
+++ b/static/login.css
@@ -1,7 +1,13 @@
-header{
-    /*margin-bottom: 30px;*/
-    /*background-color: #faf;*/
+a{
+    list-style: none;
+    text-decoration: none;
+    color: black;
 }
+a:hover{
+    color: black;
+    cursor: pointer;
+}
+
 header > h2 {
     font-weight: 400;
     text-align: center;
@@ -19,25 +25,75 @@ header > h1 {
     width: 95%;
     max-width: 500px;
     margin: 20px auto 20px auto;
-    /*margin-top: 100px;*/
-    /*background-color: #faa;*/
-    /*box-shadow: 0px 0px 3px 0px black;*/
-
     padding: 20px;
 }
-.border_15{
+.border_radius15{
     border-radius: 15px;
 }
-.border_20{
+.border_radius20{
     border-radius: 20px;
 }
-.border_30{
+.border_radius30{
     border-radius: 30px;
 }
 
-.user_login > button {
-    background-color: black;
-    width: 80%;
-    margin: 10px auto 10px auto;
-    display: grid;
+
+.signuptext{
+    font-weight: 800;
+}
+
+button,
+button::after {
+  -webkit-transition: all 0.3s;
+	-moz-transition: all 0.3s;
+  -o-transition: all 0.3s;
+	transition: all 0.3s;
+}
+
+button {
+  background: none;
+  border: 3px solid #fff;
+  border-radius: 5px;
+  color: #fff;
+  display: block;
+  font-size: 1.6em;
+  font-weight: bold;
+  margin: 1em auto;
+  padding: 2em 6em;
+  position: relative;
+  text-transform: uppercase;
+}
+
+button::before,
+button::after {
+  background: #fff;
+  content: '';
+  position: absolute;
+  z-index: -1;
+}
+
+button:hover {
+  color: #15e868;
+}
+.btn-3::after {
+  height: 0;
+  left: 50%;
+  top: 50%;
+  width: 0;
+}
+
+.btn-3:hover:after {
+  height: 100%;
+  left: 0;
+  top: 0;
+  width: 100%;
+}
+
+.signuptext_area{
+    
+    margin: 0 auto;
+}
+
+.signuptext{
+
 }
