--- a/template/index.html
+++ b/template/index.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body></body>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>회원가입 시작!</title>
+    <link rel="stylesheet" type="text/css" href = "../static/signup.css">
+</head>
+<body>
+    <div>
+        <h1>잡담을 모의해주세요!</h1>
+    </div>
+    <div class="fields">
+        <p><input type="text" placeholder="Nickname"> </p>
+        <p><input type="email" placeholder="E-mail"> </p>
+        <p><input type="password" placeholder="Password"> </p>
+        <p><input type="password" placeholder="Confirm Password"> </p>
+        <button><strong>Sign Up!</strong></button>
+    </div>
+    <br>
+    <div>
+        Already a member? <strong>Login</strong></a>
+    </div>
+    
+</body>
 </html>
