--- a/template/login.html
+++ b/template/login.html
@@ -3,12 +3,45 @@
   <head>
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="../static/login.css">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">
-    <title>Document</title>
+
+
+    <link rel="stylesheet" type="text/css" href="../static/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/login.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
+
+    <script>
+      function login() {
+        $.ajax({
+          type: "POST",
+          url: "/api/login",
+          data: {id_give: $('#userid').val(), pw_give: $('#userpw').val()},
+          success: function (response) {
+            console.log(response)
+            if (response['result'] == 'success') {
+              // 로그인이 정상적으로 되면, 토큰을 받아옵니다.
+              // 이 토큰을 mytoken이라는 키 값으로 쿠키에 저장합니다.
+              $.cookie('mytoken', response['token']);
+
+              alert('로그인 완료!')
+              window.location.href = '/'
+            } else {
+              // 로그인이 안되면 에러메시지를 띄웁니다.
+              alert(response['msg'])
+            }
+          }
+        });
+
+      }
+
+
+
+    </script>
+    <title>잡담 모의</title>
   </head>
   <body>
   <div class="wrap">
@@ -19,17 +52,17 @@
 
     <div class="user_login d-grid gap-2 col-6 mx-auto">
       <div class="form-floating mb-3" >
-        <input type="text" class="form-control border_radius15" id="user_id"  placeholder="url">
-        <label for="floatingInput">Email</label>
+        <input type="text" class="form-control border_radius15" id="userid"  placeholder="url">
+        <label>Email</label>
       </div>
       <div class="form-floating mb-3" >
-        <input type="password" class="form-control border_radius20" id="user_pw" placeholder="url">
-        <label for="floatingInput">Password</label>
+        <input type="password" class="form-control border_radius20" id="userpw" placeholder="url">
+        <label >Password</label>
       </div>
 
-      <button class="btn-3">LOGIN</button>
+      <button class="btn-3" onclick="login()">LOGIN</button>
       <div class="signuptext_area">
-         <span>Don't have an account? <a class="signuptext">Sign Up!</a></span>
+         <span>Don't have an account? <a class="signuptext" href="/register">Sign Up!</a></span>
       </div>
 
     </div>
