--- a/static/css/signup.css
+++ b/static/css/signup.css
@@ -10,11 +10,24 @@ body{
     font-size: 2.5em;
     margin: 50px auto 40px auto;
 }
+.fields >p {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    font-size: x-small;
+    color: darkgray;
+}
 .fields > p> input {
     padding: 15px;
     width: 220px;
     border-radius: 15px;
     margin: 10px auto 10px auto;
+}
+
+#confirm{
+    margin-top: 20px;
 }
 .fields > button {
     background-color: beige;
