--- a/static/css/signup.css
+++ b/static/css/signup.css
@@ -30,6 +30,11 @@ body{
     margin-top: 20px;
 }
 .fields > button {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
     background-color: beige;
     padding: 10px;
     width: 255px;
@@ -44,6 +49,11 @@ button:hover{
 }
 .login {
     font-weight: 800;
+}
+a{
+    list-style: none;
+    color: black;
+    text-decoration: none;
 }
 a:hover{
     cursor: pointer;
