--- a/templates/signup.html
+++ b/templates/signup.html
@@ -25,7 +25,7 @@
     </div>
     <br>
     <div>
-        Already a member? <a href="login.html" class="login">Login</a>
+        Already a member? <a href="/login" class="login">Login</a>
     </div>
     
 </body>
