--- a/template/landing.html
+++ b/template/landing.html
@@ -1,10 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
+<head>
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body></body>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+
+
+    <title>잡담모의</title>
+
+       <style>
+
+    @import url('//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css');
+    body { font-family: 'Spoqa Han Sans', 'Spoqa Han Sans JP', 'Sans-serif'; }
+
+    .title {
+    width: 500px;
+    height: 100px;
+    color : black;
+    margin-left : 50px;
+    margin-top : 50px;
+
+    }
+
+    .title > button{
+        border : 1px solid black;
+        border-radius: 30px;
+        width : 150px;
+        height : 45px;
+
+        margin-left : 1000px;
+        background-color: transparent;
+
+    }
+
+    .title > button:hover{
+        border : 2px solid black;
+    }
+
+    .box {
+        width : 1200px;
+        margin : 20px auto 20px auto;
+    }
+
+    .card-text{
+        color : gray;
+            }
+
+
+    </style>
+
+    <script>
+    let temp_html = `<button>나는 버튼이다</button>`
+    $(#'')
+
+    </script>
+
+</head>
+<body>
+<div class="title">
+    <h1>잡담모의</h1>
+    <button>글쓰기</button>
+</div>
+<div class="box" id="postbox">
+<div id = "post-box" class="row row-cols-1 row-cols-md-3 g-4">
+    <div class="col">
+        <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">제목이 필요합니다.</h5>
+                <p class="card-text" >내용을 적어주세요</p>
+            </div>
+        </div>
+    </div>
+    <div class="col">
+        <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">제목이 필요합니다.</h5>
+                <p class="card-text">내용을 적어주세요.</p>
+            </div>
+        </div>
+    </div>
+    <div class="col">
+        <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">제목이 필요합니다.</h5>
+                <p class="card-text">내용을 적어주세요.</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+</div>
+
+
+
+</body>
 </html>
