--- a/template/index.html
+++ b/template/index.html
@@ -4,10 +4,71 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+
+
+    <title>잡담모의</title>
+
+
+    <link href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css" >
+
+    <style>
+    * {
+    font-family: "Spoqa Han Sans", "Spoqa Han Sans JP", "Sans-serif";}
+
+    .mytitle {
+    width: 500px;
+    height: 100px;
+    color : black;
+    margin-left : 50px;
+    margin-top : 50px;
+    }
+
+    .btn-outline-dark {
+      width: 150px;
+      height: 50px;
+      color: black;
+      margin-right: 200px;
+    }
+
+
+    .mycomment {
+    color: gray;
+    }
+
+    .mycards {
+    margin: 20px auto 0px auto;
+    width: 95%;
+    max-width: 1200px;
+    }
+
+    .mypost {
+    background-color : green;
+    width: 500px;
+    margin: 15px auto 0px auto;
+    padding: 20px;
+    display: none;
+    box-shadow: 0px 0px 1px 0px gray;
+    }
+        </style>
+
+
   </head>
   <body>
-  hoho
+  <div class="mytitle">
+  <h1>잡담모의</h1>
+  </div>
+  <div>
+    <button class = button1></button>
+    <button type="button" class="btn btn-outline-dark">글쓰기</button>
+    <div class="mypost"></div>
+    </div>
 
   </body>
 </html>
+
