--- a/template/landing.html
+++ b/template/landing.html
@@ -56,8 +56,6 @@
     </style>
 
     <script>
-    let temp_html = `<button>나는 버튼이다</button>`
-    $(#'')
 
     </script>
 
@@ -68,13 +66,13 @@
     <button>글쓰기</button>
 </div>
 <div class="box" id="postbox">
-<div id = "post-box" class="row row-cols-1 row-cols-md-3 g-4">
-    <div class="col">
+<div class="row row-cols-1 row-cols-md-3 g-4">
+    <div class="col" >
         <div class="card">
             <img src="..." class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">제목이 필요합니다.</h5>
-                <p class="card-text" >내용을 적어주세요</p>
+                <p class="card-text">내용을 적어주세요.</p>
             </div>
         </div>
     </div>
