--- a/template/index.html
+++ b/template/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
+<head>
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -14,61 +14,91 @@
 
     <title>잡담모의</title>
 
+       <style>
 
-    <link href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css" >
+    @import url('//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css');
+    body { font-family: 'Spoqa Han Sans', 'Spoqa Han Sans JP', 'Sans-serif'; }
 
-    <style>
-    * {
-    font-family: "Spoqa Han Sans", "Spoqa Han Sans JP", "Sans-serif";}
-
-    .mytitle {
+    .title {
     width: 500px;
     height: 100px;
     color : black;
     margin-left : 50px;
     margin-top : 50px;
+
     }
 
-    .btn-outline-dark {
-      width: 150px;
-      height: 50px;
-      color: black;
-      margin-right: 200px;
+    .title > button{
+        border : 1px solid black;
+        border-radius: 30px;
+        width : 150px;
+        height : 45px;
+
+        margin-left : 1000px;
+        background-color: transparent;
+
     }
 
-
-    .mycomment {
-    color: gray;
+    .title > button:hover{
+        border : 2px solid black;
     }
 
-    .mycards {
-    margin: 20px auto 0px auto;
-    width: 95%;
-    max-width: 1200px;
+    .box {
+        width : 1200px;
+        margin : 20px auto 20px auto;
     }
 
-    .mypost {
-    background-color : green;
-    width: 500px;
-    margin: 15px auto 0px auto;
-    padding: 20px;
-    display: none;
-    box-shadow: 0px 0px 1px 0px gray;
-    }
-        </style>
+    .card-text{
+        color : gray;
+            }
 
 
-  </head>
-  <body>
-  <div class="mytitle">
-  <h1>잡담모의</h1>
-  </div>
-  <div>
-    <button class = button1></button>
-    <button type="button" class="btn btn-outline-dark">글쓰기</button>
-    <div class="mypost"></div>
+    </style>
+
+    <script>
+
+    </script>
+
+</head>
+<body>
+<div class="title">
+    <h1>잡담모의</h1>
+    <button>글쓰기</button>
+</div>
+<div class="box" id="postbox">
+<div class="row row-cols-1 row-cols-md-3 g-4">
+    <div class="col" >
+        <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">제목이 필요합니다.</h5>
+                <p class="card-text">내용을 적어주세요.</p>
+            </div>
+        </div>
     </div>
+    <div class="col">
+        <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">제목이 필요합니다.</h5>
+                <p class="card-text">내용을 적어주세요.</p>
+            </div>
+        </div>
+    </div>
+    <div class="col">
+        <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">제목이 필요합니다.</h5>
+                <p class="card-text">내용을 적어주세요.</p>
+            </div>
+        </div>
+    </div>
+</div>
 
-  </body>
+</div>
+
+
+
+</body>
 </html>
-
