--- a/templates/upload.html
+++ b/templates/upload.html
@@ -21,6 +21,7 @@
             document.getElementById("img_view").style.display = "block";
             document.getElementById("img_text").remove();
           };
+          alert(input.value)
           reader.readAsDataURL(input.files[0]);
         }
       }
