--- a/static/css/detail.css
+++ b/static/css/detail.css
@@ -1,129 +1,81 @@
-
 #wrap {
-    height: 100vh;
-    background: #fdfcfc;
+  background: #fdfcfc;
 }
 
 #wrap main {
-    height: 100%;
-    padding: 30px;
-    box-sizing: border-box;
-    position: relative;
+  height: 100%;
+  padding: 30px;
+  box-sizing: border-box;
+  position: relative;
 }
 
 .logo {
-    margin: 30px 20px;
+  margin: 30px 20px;
 }
 
 .logo h2 {
-    font-size: 2rem;
-    font-weight: 700;
+  font-size: 2rem;
+  font-weight: 700;
 }
 
 img {
-    max-width: 100%;
-    width: auto;
-    height: auto;
+  max-width: 100%;
+  width: auto;
+  height: auto;
 }
 
 .upload_container {
-    display: flex;
-    align-items: center;
+ display: flex;
+    align-items: flex-start;
     justify-content: center;
-    /*background-color: indianred;*/
+    flex-direction: column;
+    max-width: 80%;
+    margin: 0 auto;
 }
 
 .img_here {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: inherit;
-    box-shadow: 1px 2px 5px 0px rgb(0 0 0 / 30%);
-    border: 1px solid #d1d1d1;
-    border-radius: 5px;
-    /*background-color: #ffa;*/
-
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: inherit;
+  box-shadow: 1px 2px 5px 0px rgb(0 0 0 / 30%);
+  border: 1px solid #d1d1d1;
+  border-radius: 5px;
+  /*background-color: #ffa;*/
 }
-
 
 form {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 50px;
-}
-
-.img_container {
-    max-width: 700px;
-    width: 95%; !important;
-    height: 400px; !important;
-
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 50px;
 }
 
 .img_label img {
-    width: 100%;
-    object-fit: cover;
-    background-position: center;
-    height: 100%;
-    display: none;
+  width: 100%;
+  object-fit: cover;
+  background-position: center;
+  height: 100%;
+  display: none;
 }
 
 #img_text {
-    color: #b1b1b1;
+  color: #b1b1b1;
 }
 
 .input_field_conatiner {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    max-width: 680px;
-    gap: 20px 0;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 680px;
+  gap: 20px 0;
 }
 
 .input_field_conatiner input[type="text"] {
-    height: 35px;
-    border: 1px solid #919191;
-    border-radius: 3px;
-    text-indent: 10px;
-    outline: none;
-}
- .title{
-        font-size: 40px;
-    }
-.textsection {
-    border-radius: 3px;
-    /*resize: none;*/
-    /*padding: 10px;*/
-    box-sizing: border-box;
-    outline: none;
-    border-color: #919191;
-    width: 700px;
-    height: 300px;
-    /*background-color: #aff;*/
-}
-   .textsection > span{
-       font-size: 20px;
-   }
-
-
-.btn {
-    border: 1px solid #d1d1d1;
-    background: #fff;
-    min-width: 100px;
-    box-shadow: 1px 2px 5px 0px rgb(0 0 0 / 30%);
-    border-radius: 5px;
-    padding: 10px;
-    cursor: pointer;
-}
-
-.submit_btn_conatiner {
-    display: flex;
-    justify-content: flex-end;
-
-
-}
-
-.update_btn{
-    margin-right: 15px;
+  height: 35px;
+  border: 1px solid #919191;
+  border-radius: 3px;
+  text-indent: 10px;
+  outline: none;
 }
