--- a/static/css/upload.css
+++ b/static/css/upload.css
@@ -1,114 +1,119 @@
-:root{
-    --border-color:#e6e6e6;
+:root {
+  --border-color: #e6e6e6;
 }
 #wrap {
+  background: #fdfcfc;
+}
+#wrap main {
+  padding: 30px;
+  box-sizing: border-box;
+  position: relative;
+}
+.logo {
+  margin: 30px 20px;
+}
+.logo h2 {
+  font-size: 2rem;
+  font-weight: 700;
+}
 
-        background: #fdfcfc;
-      }
-      #wrap main {
-        height: 100%;
-        padding: 30px;
-        box-sizing: border-box;
-        position: relative;
-      }
-      .logo {
-        margin: 30px 20px;
-      }
-      .logo h2 {
-        font-size: 2rem;
-        font-weight: 700;
-      }
+.upload_container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.img_label {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: inherit;
+  box-shadow: 1px 2px 5px 0px rgb(0 0 0 / 30%);
+  border: 1px solid #d1d1d1;
+  border-radius: 5px;
+  cursor: pointer;
+  min-height: 230px;
+}
+.upload_container form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 40px;
+}
+.img_container {
+  max-width: 700px;
+  width: 100%;
+}
+.img_container.upload {
+  max-width: 450px;
+}
+#img_view {
+  width: 100%;
 
-      .upload_container {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
-      .img_label {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        height: inherit;
-        box-shadow: 1px 2px 5px 0px rgb(0 0 0 / 30%);
-        border: 1px solid #d1d1d1;
-        border-radius: 5px;
-        cursor: pointer;
-      }
-      .upload_container form {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 50px;
-      }
-      .img_container {
-        max-width: 500px;
-        width: 100%;
-        height: 300px;
-      }
-      .img_label img {
-        width: 100%;
-        object-fit: cover;
-        background-position: center;
-        height: 100%;
-        display: none;
-      }
-      #img_text {
-        color: #b1b1b1;
-      }
-      .input_field_conatiner {
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-        max-width: 680px;
-        gap: 20px 0;
-      }
-      .input_field_conatiner input[type="text"] {
-        height: 35px;
-        border: 1px solid;
-          border-color: var(--border-color);
-        border-radius: 3px;
-        text-indent: 10px;
-        outline: none;
-      }
-      #upload_textarea {
-        border-radius: 3px;
-        resize: none;
-        padding: 10px;
-        box-sizing: border-box;
-        outline: none;
-        border-color: var(--border-color);
-      }
-      .submit_btn {
-        border: 1px solid #d1d1d1;
-        background: #fff;
-        min-width: 100px;
-        box-shadow: 1px 2px 5px 0px rgb(0 0 0 / 30%);
-        border-radius: 5px;
-        padding: 10px;
-          cursor:pointer;
-      }
-      .submit_btn_conatiner {
-        display: flex;
-        justify-content: flex-end;
-        cursor: pointer;
-      }
-      .detail_title{
-           font-weight: 500;
-            font-size: 23px;
-          margin-bottom:30px;
-      }
-      #img_view{
-             max-width: 700px;
-    max-height: 450px;
-    width: 100%;
-    object-fit: cover;
-      }
-      #text_board{
-             min-height: 200px;
-                padding: 10px;
-                box-sizing: border-box;
-                background: #f9f9f9;
-                border-radius: 2px;
-                border: 1px solid #ededed;
-      }
+  max-height: 500px;
+  object-fit: cover;
+}
+.upload_img_container {
+  height: 230px;
+  display: none;
+}
+#img_text {
+  color: #b1b1b1;
+}
+.input_field_conatiner {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 680px;
+  gap: 20px 0;
+}
+
+.input_field_conatiner input[type="text"] {
+  height: 35px;
+  border: 1px solid;
+  border-color: var(--border-color);
+  border-radius: 3px;
+  text-indent: 10px;
+  outline: none;
+}
+#upload_textarea {
+  border-radius: 3px;
+  resize: none;
+  padding: 10px;
+  box-sizing: border-box;
+  outline: none;
+  border-color: var(--border-color);
+}
+.submit_btn {
+  border: 1px solid #d1d1d1;
+  background: #fff;
+  min-width: 100px;
+  box-shadow: 1px 2px 5px 0px rgb(0 0 0 / 30%);
+  border-radius: 5px;
+  padding: 10px;
+  cursor: pointer;
+}
+.submit_btn_conatiner {
+  display: flex;
+  justify-content: flex-end;
+  cursor: pointer;
+}
+.detail_title {
+  font-weight: 500;
+  font-size: 23px;
+  margin: 30px 0;
+  letter-spacing: 0.5px;
+      line-height: 28px;
+}
+#img_view {
+}
+#text_board {
+  min-height: 200px;
+  padding: 10px;
+  box-sizing: border-box;
+  background: #f9f9f9;
+  border-radius: 2px;
+  border: 1px solid #ededed;
+  font-size: 14px;
+}
