--- a/templates/upload.html
+++ b/templates/upload.html
@@ -4,57 +4,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../static/css/reset.css" />
-    <link rel="stylesheet" href="../static/css/upload.css">
+    <link rel="stylesheet" href="../static/css/upload.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="../static//JS/upload.js"></script>
     <title>업로드 페이지</title>
-    <style>
-
-    </style>
-    <script>
-      function handleImg(input) {
-        if (input.files && input.files[0]) {
-          var reader = new FileReader();
-          reader.onload = function (e) {
-            document
-              .getElementById("img_view")
-              .setAttribute("src", e.target.result);
-            document.getElementById("img_view").style.display = "block";
-            document.getElementById("img_text").remove();
-          };
-          alert(input.value)
-          reader.readAsDataURL(input.files[0]);
-        }
-      }
-      function send(){
-        let img = document.getElementById('img_view').src;
-        let title = document.getElementById('upload_title').value;
-        let description = document.getElementById('upload_textarea').value;
-
-        $.ajax({
-        type: "POST",
-        url: "/api/upload",
-        data: {upload_img: img, upload_title: title, upload_description: description},
-        success: function (res) {
-            console.log(res);
-          window.location.href = "/api/detail"
-
-        },
-    });
-      }
-    </script>
+    <style></style>
+    <script></script>
   </head>
 
   <body>
     <div id="wrap">
       <main>
-        <div class="logo">
-          <h2>잡담모의</h2>
-        </div>
         <div class="upload_container">
+          <div class="logo">
+            <h2>잡담모의</h2>
+          </div>
           <form action="">
-            <div class="img_container">
+            <div class="img_container upload">
               <label class="img_label" for="upload_btn">
-                <img id="img_view" src="" alt="" />
+                <img id="img_view" class="upload_img_container" src="" alt="" />
                 <span id="img_text">사진을 업로드해주세요.</span>
               </label>
               <input
@@ -66,7 +34,12 @@
               />
             </div>
             <div class="input_field_conatiner">
-              <input id="upload_title"type="text" placeholder="제목을 작성해주세요" />
+              <input
+                id="upload_title"
+                type="text"
+                placeholder="제목을 작성해주세요"
+                maxlength="25"
+              />
               <textarea
                 id="upload_textarea"
                 name=""
@@ -75,14 +48,14 @@
                 placeholder="글을 작성해주세요"
               ></textarea>
               <div class="submit_btn_conatiner">
-                <button class="submit_btn" type="button" onclick="send()">업로드</button>
+                <button class="submit_btn" type="button" onclick="send()">
+                  업로드
+                </button>
               </div>
             </div>
           </form>
         </div>
       </main>
     </div>
-    <!-- Code injected by live-server -->
   </body>
 </html>
-
