--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -43,7 +44,7 @@
         });
       }
     </script>
-    >>>>>>> 4fa35c784ad32851424b41cf76bd460d3f654572
+
   </head>
 
   <body>
