업로드 페이지 텍스트 변경

--- a/templates/upload.html
+++ b/templates/upload.html
@@ -58,7 +58,7 @@
             <div class="img_container upload">
               <label class="img_label" for="upload_btn">
                 <img id="img_view" class="upload_img_container" src="" alt="" />
-                <span id="img_text">사진을 업로드해주세요.</span>
+                <span id="img_text">사진을 클릭해주세요.</span>
               </label>
               <input
                 id="upload_btn"
