--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -9,42 +9,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="../static//JS/upload.js"></script>
     <title>업로드 페이지</title>
-    <script>
-      function handleImg(input) {
-        if (input.files && input.files[0]) {
-          var reader = new FileReader();
-          reader.onload = function (e) {
-            document
-              .getElementById("img_view")
-              .setAttribute("src", e.target.result);
-            document.getElementById("img_view").style.display = "block";
-            document.getElementById("img_text").remove();
-          };
-          alert(input.value);
-          reader.readAsDataURL(input.files[0]);
-        }
-      }
-      function send() {
-        let img = document.getElementById("img_view").src;
-        let title = document.getElementById("upload_title").value;
-        let description = document.getElementById("upload_textarea").value;
-
-        $.ajax({
-          type: "POST",
-          url: "/api/upload",
-          data: {
-            upload_img: img,
-            upload_title: title,
-            upload_description: description,
-          },
-          success: function (res) {
-            console.log(res);
-            window.location.href = "/api/detail";
-          },
-        });
-      }
-    </script>
-
   </head>
 
   <body>
