--- a/templates/com.html
+++ b/templates/com.html
@@ -17,16 +17,39 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
     <title>Title</title>
+    <script>
+        // $(document).ready(function (){
+        //     ().css('calc',`(100vh - (빨간색선택자)-$(파란색선택자)`)
+        //     let (".container").css('height',`calc(100vh - ${".header"})`)
+        // });
+    </script>
 </head>
 <body>
     <div class="wrap">
-        <header>
-            <h1>잡당모의</h1>
+        <header class="header">
+            <h1><a class="logo" href="/">잡당모의</a> </h1>
+            <a class="write_btn">글쓰기</a>
         </header>
+
+
         <div class="container">
             <div class="content">
+                <ul>
+<!--                    <li>card1</li>-->
+<!--                    <li>card1</li>-->
+<!--                    <li>card1</li>-->
+<!--                    <li>card1</li>-->
+<!--                    <li>card1</li>-->
+<!--                    <li>card1</li>-->
+
+
+
+
+
+                </ul>
                 <a href="/detail">글 상세보기</a>
-                
+                <a href="/api/upload">작성하기</a>
+
             </div>
         </div>
 
