--- a/static/css/com.css
+++ b/static/css/com.css
@@ -1,69 +1,50 @@
-:root{
-    --border-color:#e6e6e6;
+.header{
+    position: sticky;
+    top: 0;
+    background-color: lightgoldenrodyellow;
+    height: 150px;
 }
-*,a{
-    list-style: none;
-    text-decoration: none;
-    color: black;
-}
-a:hover{
-    color: black;
-}
-.wrap {
-    background: #fdfcfc;
 
-    width: 100%;
-    height: 1800px;
-    background-color: #ffa;
-        /*margin:0 auto;*/
+.header > h1 {
+    font-size: 2rem;
+    font-weight: 800;
+
+    height: 100px;
+
+    position: absolute;
+    top: 50px;
+    left: 50px;
 }
-    header{
 
-        width: 100%;
-        height: 200px;
-        background-color: #faa;
-        position: fixed;
-        top: 0;
-        z-index: 50;
-    }
-        header > h1{
-            background-color: #aff;
-            font-size: 45px;
-            font-weight: 800;
-            padding-top: 30px;
-        }
-        .write_btn{
-            display: flex;
-            justify-content: flex-end;
-            cursor: pointer;
+.btn{
+    position: absolute;
+    top: 80px;
+    right: 30px;
+    padding: 10px 30px 10px 30px;
 
-        }
-.logo{
+    font-size: 1rem;
+    border-radius: 10px;
+    border: 1px solid black;
+
+    background-color: beige;
+}
+
+.card{
+    justify-content: space-evenly;
+    text-align: center;
+}
+
+.card > ul >li{
+    list-style-type: none;
+    display: inline-block;
+    margin: 50px;
+
+    height: 500px;
+    width: 450px;
+    border-radius: 15px;
+
+    border: 1px solid black;
+}
+btn:hover{
     cursor: pointer;
-
-}
-
-.content{
-    margin-top: 200px;
-
-    width: 100%;
-
-    background-color: #afa;
-    /*display: flex;*/
-    /*flex-wrap: wrap;*/
-}
-.content > ul{
-    width: 100%;
-    height: auto;
-
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-}
-.content > ul > li{
-    width: 400px;
-    height: 300px;
-    background-color: #ffaaaa;
-    /*display: block;*/
-    /*float: left;*/
-
 }
