--- a/templates/com.html
+++ b/templates/com.html
@@ -2,12 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
 
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
 
     <link rel="stylesheet" type="text/css" href="../static/css/reset.css">
@@ -16,7 +14,8 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
-    <title>Title</title>
+    <script src="../static/JS/com.js"></script>
+    <title>세상의 모든 잡담</title>
     <script>
         // $(document).ready(function (){
         //     ().css('calc',`(100vh - (빨간색선택자)-$(파란색선택자)`)
@@ -25,36 +24,15 @@
     </script>
 </head>
 <body>
-    <div class="wrap">
-        <header class="header">
-            <h1><a class="logo" href="/">잡당모의</a> </h1>
-            <a class="write_btn">글쓰기</a>
-        </header>
+<div class="header">
+    <h1>잡담모의</h1>
+    <nav>
+       <a href="/api/upload"> <button class="btn"> 잡담하기</button></a>
+    </nav>
+</div>
 
+<div class="card" id="card">
+</div>
 
-        <div class="container">
-            <div class="content">
-                <ul>
-<!--                    <li>card1</li>-->
-<!--                    <li>card1</li>-->
-<!--                    <li>card1</li>-->
-<!--                    <li>card1</li>-->
-<!--                    <li>card1</li>-->
-<!--                    <li>card1</li>-->
-
-
-
-
-
-                </ul>
-                <a href="/detail">글 상세보기</a>
-                <a href="/api/upload">작성하기</a>
-
-            </div>
-        </div>
-
-
-
-    </div>
 </body>
 </html>
