--- a/templates/com.html
+++ b/templates/com.html
@@ -1,60 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+  <head>
+    <meta charset="UTF-8" />
+    <!--     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"-->
+    <!--        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">-->
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-
-    <link rel="stylesheet" type="text/css" href="../static/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="../static/css/com.css">
-
+    <link rel="stylesheet" type="text/css" href="../static/css/reset.css" />
+    <link rel="stylesheet" type="text/css" href="../static/css/com.css" />
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
     <title>Title</title>
     <script>
-        // $(document).ready(function (){
-        //     ().css('calc',`(100vh - (빨간색선택자)-$(파란색선택자)`)
-        //     let (".container").css('height',`calc(100vh - ${".header"})`)
-        // });
+      // $(document).ready(function (){
+      //     ().css('calc',`(100vh - (빨간색선택자)-$(파란색선택자)`)
+      //     let (".container").css('height',`calc(100vh - ${".header"})`)
+      // });
     </script>
-</head>
-<body>
+  </head>
+  <body>
     <div class="wrap">
-        <header class="header">
-            <h1><a class="logo" href="/">잡당모의</a> </h1>
-            <a class="write_btn">글쓰기</a>
-        </header>
+      <header class="header">
+        <h1><a class="logo" href="/">잡당모의</a></h1>
+        <a class="write_btn">글쓰기</a>
+      </header>
 
+      <div class="container">
+        <div class="content">
+          <ul>
+            <li>
 
-        <div class="container">
-            <div class="content">
-                <ul>
-<!--                    <li>card1</li>-->
-<!--                    <li>card1</li>-->
-<!--                    <li>card1</li>-->
-<!--                    <li>card1</li>-->
-<!--                    <li>card1</li>-->
-<!--                    <li>card1</li>-->
+            </li>
+          </ul>
+            <a href="/detail/2">이동하기</a>
 
-
-
-
-
-                </ul>
-                <a href="/detail">글 상세보기</a>
-                <a href="/api/upload">작성하기</a>
-
-            </div>
+          <a href="/detail/1">1이동하기</a>
+          <a href="/detail">글 상세보기</a>
+          <a href="/api/upload">작성하기</a>
         </div>
-
-
-
+      </div>
     </div>
-</body>
+  </body>
 </html>
+
