com.html 로고 a태그 추가

--- a/static/css/com.css
+++ b/static/css/com.css
@@ -25,7 +25,7 @@
     font-size: 1rem;
     border-radius: 10px;
     border: 1px solid black;
-
+    cursor: pointer;
     background-color: beige;
 }
 
@@ -47,4 +47,8 @@
 }
 btn:hover{
     cursor: pointer;
+}
+a{
+    text-decoration: none;
+    color: black;
 }
