--- a/templates/com.html
+++ b/templates/com.html
@@ -1,31 +1,37 @@
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
 
->>>>>>> 7e2323cd813f8f6a415c2e75610dcd8865fb1e87
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-    <link rel="stylesheet" type="text/css" href="../static/css/reset.css" />
-    <link rel="stylesheet" type="text/css" href="../static/css/com.css" />
+
+    <link rel="stylesheet" type="text/css" href="../static/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/com.css">
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
     <script src="../static/JS/com.js"></script>
     <title>세상의 모든 잡담</title>
     <script>
-      // $(document).ready(function (){
-      //     ().css('calc',`(100vh - (빨간색선택자)-$(파란색선택자)`)
-      //     let (".container").css('height',`calc(100vh - ${".header"})`)
-      // });
+        // $(document).ready(function (){
+        //     ().css('calc',`(100vh - (빨간색선택자)-$(파란색선택자)`)
+        //     let (".container").css('height',`calc(100vh - ${".header"})`)
+        // });
     </script>
 </head>
 <body>
 <div class="header">
-    <h1>잡담모의</h1>
+    <h1><a href="/"> 잡담모의</a></h1>
     <nav>
-       <a href="/api/upload"> <button class="btn"> 잡담하기</button></a>
+       <a href="/api/upload">
+           <button class="btn">
+               잡담하기
+           </button>
+       </a>
     </nav>
 </div>
 
