--- a/templates/detail.html
+++ b/templates/detail.html
@@ -6,12 +6,17 @@
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="../static/css/upload.css" />
+
+<!--    <link rel="stylesheet" href="../static/css/upload.css/">-->
+    <link rel="stylesheet" href="../static/css/detail.css" />
     <link rel="stylesheet" href="../static/css/reset.css" />
+
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="../static//JS//detail.js"></script>
     <title>Document</title>
   </head>
+  <body>
     <div id="wrap">
       <main>
         <div class="upload_container">
