--- a/templates/upload.html
+++ b/templates/upload.html
@@ -50,6 +50,9 @@
                 <button class="submit_btn" type="button" onclick="send()">
                   업로드
                 </button>
+                <button class="submit_btn" type="button" onclick="window.location.href='/'">
+                  돌아가기
+                </button>
               </div>
             </div>
           </form>
