업로드, 디테일 페이지 css 수정

--- a/static/css/detail.css
+++ b/static/css/detail.css
@@ -2,12 +2,12 @@
   --border-color: #e6e6e6;
 }
 #wrap {
-  background: #171616;
   height: 100vh;
   overflow-y: scroll;
 }
 #wrap main {
   padding: 30px;
+  background: #0c0c0c;
   box-sizing: border-box;
   position: relative;
   display: flex;
@@ -23,6 +23,7 @@
 }
 
 .upload_container {
+  background: #171616;
   width: fit-content;
   display: flex;
   align-items: center;
