--- a/static/css/upload.css
+++ b/static/css/upload.css
@@ -2,9 +2,11 @@
   --border-color: #606060;
 }
 #wrap {
-  background: #171616;
+  height: 100vh;
+  overflow-y: scroll;
 }
 #wrap main {
+  background: #0c0c0c;
   padding: 30px;
   box-sizing: border-box;
   position: relative;
@@ -22,6 +24,7 @@
 
 .upload_container {
   display: flex;
+  background: #171616;
   max-width: 700px;
   width: 100%;
   justify-content: center;
