업로드 페이지 이미지 사진규격 텍스트 추가

--- a/templates/upload.html
+++ b/templates/upload.html
@@ -31,7 +31,12 @@
                 hidden=""
                 onchange="handleImg(this)"
               />
+              <span class="guide_message"
+                >이미지 사이즈는 1280*720 사이즈를 맞춰서 올려주시면
+                좋아요!</span
+              >
             </div>
+
             <div class="input_field_conatiner">
               <input
                 id="upload_title"
@@ -50,7 +55,11 @@
                 <button class="submit_btn" type="button" onclick="send()">
                   업로드
                 </button>
-                <button class="submit_btn" type="button" onclick="window.location.href='/'">
+                <button
+                  class="submit_btn"
+                  type="button"
+                  onclick="window.location.href='/'"
+                >
                   돌아가기
                 </button>
               </div>
