--- a/static/css/upload.css
+++ b/static/css/upload.css
@@ -9,14 +9,14 @@
   overflow-y: scroll;
 }
 #wrap main {
-    padding: 30px;
-    background: #0c0c0c;
-    box-sizing: border-box;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
+  padding: 30px;
+  background: #0c0c0c;
+  box-sizing: border-box;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
 }
 .logo {
   margin: 30px 20px;
@@ -136,4 +136,10 @@
   border-radius: 2px;
   border: 1px solid #ededed;
   font-size: 14px;
+}
+.guide_message {
+  color: #9a9a9a;
+  font-size: 11px;
+  margin-top: 8px;
+  display: block;
 }
