최최종본 디테일페이지 댓글 완

--- a/templates/detail.html
+++ b/templates/detail.html
@@ -1,5 +1,4 @@
 <html lang="en">
-  `
   <head>
     <meta charset="UTF-8" />
     <meta
@@ -23,12 +22,9 @@
           <div class="logo">
             <h2>잡담모의</h2>
           </div>
-          <form id="upload_form" action="">
-           
-          </form>
+          <form id="upload_form" action=""></form>
         </div>
       </main>
     </div>
   </body>
 </html>
-`
