--- a/static/css/detail.css
+++ b/static/css/detail.css
@@ -127,8 +127,8 @@ body::-webkit-scrollbar {
   min-height: 200px;
   padding: 15px;
   box-sizing: border-box;
-  background: #c0c6ca;
-
+  box-shadow: inset 0 0 5px 0px rgb(0 0 0 / 10%);
+  line-height: 18px;
   border-radius: 5px;
   font-size: 14px;
   color: #3b3c36;
@@ -138,7 +138,7 @@ body::-webkit-scrollbar {
   display: flex;
   width: 100%;
   flex-direction: column;
-  gap: 20px 0;
+  gap: 10px 0;
 }
 
 .comment_container .comment_title {
@@ -177,7 +177,7 @@ body::-webkit-scrollbar {
   gap: 10px 0;
   color: #3b3c36;
   padding: 11px;
-  background: #c0c6ca;
+  box-shadow: inset 0 0 5px 0px rgb(0 0 0 / 10%);
   border-radius: 5px;
 }
 
