--- a/templates/upload.html
+++ b/templates/upload.html
@@ -43,6 +43,7 @@
                 type="text"
                 placeholder="제목을 작성해주세요"
                 maxlength="20"
+                autocomplete="off"
               />
               <textarea
                 id="upload_textarea"
